# pai-thin-client

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pai_client.py  pai_test.py  pyproject.toml  requirements.dev.txt  requirements.txt  workbook.ipynb
.github/: pull-request-template.md
components/: __init__.py  pai_requests.py  pai_responses.py  pai_uris.py  request_objects.py
src/: pai_client.py  pai_requests.py
src/components/: pai_requests.py  pai_responses.py  pai_uris.py
src/paiclient/: __init__.py  objects.py  pai_client.py
src/paiclient/components/: pai_responses.py  pai_uris.py  request_objects.py
src/privateai_client/: __about__.py  __init__.py  objects.py  pai_client.py
src/privateai_client/components/: __init__.py  llm_connector.py  pai_requests.py  pai_responses.py  pai_uris.py  request_objects.py
src/privateai_client/post_processing/: __init__.py  post_processing.py
src/privateai_client/post_processing/processors/: __init__.py  default.py  fuzzy_match.py
src/privateai_client/tests/: .env  .env.example  test_client.py  test_integration.py  test_post_processing.py  test_request_objects.py
src/privateai_client/tests/test_files/: demo-simple.pptx  simpsons_wiki.txt
tests/: test_client.py  test_request_objects.py
