[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "privateai_client"
version = "1.3.0"
authors = [
  { name="Adam Guiducci", email="adam.guiducci@private-ai.com" },
  { name="Bryan Bell-Smith", email="bryan.bellsmith@private-ai.com" },
]
description = "A thin client for communicating with the Private AI de-identication API."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/privateai/pai-thin-client/"
"Bug Tracker" = "https://github.com/privateai/pai-thin-client/issues"

