[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "privateai_client"
dynamic = ["version"]
authors = [
  { name="Adam Guiducci", email="adam.guiducci@private-ai.com" },
  { name="Bryan Bell-Smith", email="bryan.bellsmith@private-ai.com" },
]
description = "A thin client for communicating with the Private AI de-identication API."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["requests~=2.31.0"]

[project.urls]
"Homepage" = "https://github.com/privateai/pai-thin-client/"
"Bug Tracker" = "https://github.com/privateai/pai-thin-client/issues"
"Changelog" = "https://github.com/privateai/pai-thin-client/blob/main/CHANGELOG.md"
"Contributing" = "https://github.com/privateai/pai-thin-client/blob/main/CONTRIBUTING.md"

[tool.hatch.version]
path = "src/privateai_client/__about__.py"
